# mfemMechanics

./: .clang-format  .gitignore  3DBeamBuckle.geo  CMakeLists.txt  Plugin.h  beam.cpp  beam.mesh  block.cpp  block.mesh  block2.mesh  ex16.cpp  ex19.cpp  ex2.cpp  ex2p.cpp  gmshBeam.geo  main.cpp  mesh.msh  pbeam.cpp  pblock.cpp  petchbuckle.cpp  petscSetting  pmain.cpp  pressure.msh  pressure.txt  tensile.mesh  test.cpp  test.mesh  test2.cpp  test3.cpp
data/: 3DBeamBuckle.geo  3DBeamBuckle.msh  3D_DCB_BUG.geo  3D_DCB_BUG.msh  DCB.geo  DCB.msh  DCB_3D.geo  DCB_3D.msh  block.mesh  clamp_plate.geo  clamp_plate.msh  crack_square2d.geo  crack_square2d.msh  crack_square2d_hex.geo  crack_square2d_hex.msh  crack_square2d_quad.geo  crack_square2d_quad.msh  cube.mesh  gmshBeam.msh  mesh.geo  mesh.msh  periodic_2D_square.geo  periodic_2D_square.msh  petscSetting  petscSetting.bak  pressure.geo  pressure.msh  simple_bar.msh  simple_bar_3d.geo  simple_bar_3d.msh  simply_support_composite.geo  simply_support_composite.msh  simply_support_composite_full.geo  simply_support_composite_full.msh  simply_support_composite_full2.geo  simply_support_composite_full2.msh  slepcSetting  square-nurbs-refine.mesh  square2D.mesh  square_crack.geo  (+5 more)
examples/: CMakeLists.txt
examples/Cahn–Hilliard/: CMakeLists.txt  main.cpp
examples/PhaseField/: CMakeLists.txt  pshear.cpp  shear.cpp
examples/beamParallel/: CMakeLists.txt  main.cpp
examples/blockOperator/: CMakeLists.txt  ex19.cpp
examples/buckling/: CMakeLists.txt  main.cpp
examples/czm/: CMakeLists.txt  bar.cpp  bar_3D.cpp  dynamic_czm.cpp  main.cpp  main2.cpp  main2p.cpp  main3D.cpp  test_3D_BUG.cpp
examples/heat/: CMakeLists.txt  main.cpp  static.cpp  thermalStrain.cpp
examples/linearBuckling/: CMakeLists.txt  main.cpp
examples/linearTests/: CMakeLists.txt  compositePlate.cpp  compositePlateFull.cpp
examples/misc/: CMakeLists.txt  autodiffPrac.cpp
examples/playMesh/: CMakeLists.txt  main.cpp
examples/postBuckling2D/: CMakeLists.txt  main.cpp
examples/postBuckling3D/: CMakeLists.txt  main1.cpp  main2.cpp
fem/: AMR.cpp  AMR.h  CMakeLists.txt  CZM.cpp  CZM.h  CompositeSolidShell.cpp  CompositeSolidShell.h  FEMPlugin.cpp  FEMPlugin.h  PhaseField.cpp  PhaseField.h  PostProc.cpp  PostProc.h  Solvers.cpp  Solvers.h  backup.cpp
material/: CMakeLists.txt  Material.cpp  Material.h  NeoHookeanMaterial.cpp  NeoHookeanMaterial.h  PhaseFieldMaterial.cpp  PhaseFieldMaterial.h
tests/: CMakeLists.txt  autodiff_test.cpp  eigen_decomp_test.cpp
util/: CMakeLists.txt  CircularBuffer.hpp  CircularBuffer.tpp  PrettyPrint.cpp  PrettyPrint.h  SymmetricEigensolver3x3.hpp  ringbuffer.hpp  typeDef.h  util.cpp  util.h
